--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -17,11 +17,11 @@
             <div id="login-box">
                 <h4 id="login-text">Please fill in your details below to register:</h4>
                 <form id="new-user-form" action="/users" method="post">
-                  <input id="firstName" type="text" name="firstName" value="" placeholder="first name">
-                  <input id="lastName" type="text" name="lastName" value="" placeholder="last name">
-                  <input type="text" name="email" placeholder="email" id="email"><br><br>
-                  <input type="password" name="password" placeholder="password" id="password"><br><br>
-                  <input id="submit" type="submit" value="Click to register!">
+                    <input id="firstName" type="text" name="firstName" value="" placeholder="first name"><br><br>
+                    <input id="lastName" type="text" name="lastName" value="" placeholder="last name"><br><br>
+                    <input type="text" name="email" placeholder="email" id="email"><br><br>
+                    <input type="password" name="password" placeholder="password" id="password"><br><br>
+                    <input id="submit" type="submit" value="Click to register!">
                 </form>
             </div>
         </div>
