--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -17,8 +17,7 @@
           </form>
         </div>
         <div class="post-likes">
-          {{this.likesCount}}
-          likes
+          {{this.likesCount}} likes
           <div class="liked-by-tooltip">
             {{#each this.likedBy}}
               <div>{{this}}</div>
