--- a/views/posts/show.hbs
+++ b/views/posts/show.hbs
@@ -40,7 +40,7 @@
 </ul>
 
 <form action="/posts/{{ post._id }}/comments" method="POST">
-  <textarea name="message" placeholder="Leave a comment"></textarea>
+  <textarea name="message" input="text" placeholder="Leave a comment"></textarea>
   <button type="submit">Submit</button>
 </form>
 
