--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title class="title">{{title}}</title>
-        <link rel="stylesheet" href="/public/stylesheets/style.css">
+        <link rel="stylesheet" href="/stylesheets/style.css">
     </head>
     <body>
         <nav>
@@ -15,7 +15,7 @@
         <div id="content-box">
             <div id="login-box">
                 <h3 id="login-title">Start connecting now!</h3>
-                <img src="/Users/chrishall/Projects/acebook-neutral/public/images/download.png" alt="people connecting image" id="connecting-pic">
+                <img src="/images/download.png" alt="people connecting image" id="connecting-pic">
                 <a href="/sessions/new"><h3 id="login-link">Click here to login</h3></a>
             </div>
         </div>
