--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -1,6 +1,6 @@
 <form id="new-post-form" action="/posts" method="post">
   <label for="message">Message: </label>
-  <input id="message" type="text" name="message" value="" />
+  <textarea id="message" name="message"></textarea>
   {{#if error}}
     <p><strong>Error:</strong> {{error}}</p>
   {{/if}}
