added functionality to write comments under a post, also displays author of post, added some CSS in a separate file for comment section. comments required to edit posts.js, index.hbs of posts views, app.js, created a new routes file and new model and controller files

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -11,6 +11,21 @@
         {{/each}}
       </div>
     </li>
+    {{!-- Displaying Comments --}}
+    {{#each this.comments}}
+    <p>&gt;&gt;&gt;"{{this.content}}"<br>
+    <span class="comment-author">Posted by {{this.user}}</p></li></span>
+    {{/each}}
+
+
+{{!-- Comment section --}}
+    <form action="/comments" method="post" class="comment-form">
+    <input type="hidden" name="postId" value={{this._id}} />
+    <input type="text" value="" name="commentContent" placeholder="Type comment here ..." required>
+    <button type="submit" class="comment-button">Comment</button>
+    </form>
+
+{{!-- Like button --}}
     <form action="/likes" method="post">
       <input type="hidden" name="postId" value={{this._id}} />
       <button type="submit" class="like-button">❤️</button>
