--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -15,7 +15,7 @@
   <div class="new-postbox">
     <form id="new-post-form" action="/posts" method="post">
       <div class="new-post-content">
-        <input id="message" type="text" name="message" value="" placeholder="Say something...">
+        <textarea id="message" type="text" name="message" value="" rows="6" placeholder="Say something..." maxlength="33000" required></textarea>
       </div>
       <div class="new-post-controls">
         <input type="submit" value="Submit">
