--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -18,10 +18,16 @@
       <input id="last-name" type="last-name" name="lastName" maxlength="20" value="" required><br>
       <label for="email">Email: </label><br>
       <input id="email" type="email" name="email" value="" required><br>
+      <ul>
+        Passwords must contain:
+        <li>At least 8 characters (A-Z)</li>
+        <li>At least one number</li> 
+        <li>At least one special characters</li> 
+      </ul>
       <label for="password">Password: </label><br>
       <input id="password" type="password" name="password" value="" required><br>
       <label for="confirm-password">Confirm Password: </label><br>
-      <input id="confirm-password" type="password" name="confirm-password" value="" required><br>
+      <input id="confirm-password" type="password" name="confirmPassword" value="" required><br>
       <input id="submit" type="submit" value="Submit" class="global-button">
     </form>
     <p>Did you mean <a href="/sessions/new">login</a>?</p>
