--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,3 +1,12 @@
+{{#if errorMessages}}
+<p>The following errors occurred:</p>
+<ul>
+  {{#each errorMessages}}
+    <li>{{this}}</li>
+  {{/each}}
+</ul>
+{{/if}}
+
 <form id="new-user-form" action="/users" method="post">
   <label for="firstName">First Name: </label>
   <input id="firstName" type="text" name="firstName" value="">
