--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -5,7 +5,36 @@
 <ul class="posts">
   {{#each posts}}
   <li><a href="/posts/{{this._id}}">{{this.message}}</a></li> 
-  <li>{{this.likes}} likes</li><button onclick="Likes">Like</button>
+  
+  <button class="likeButton" data-postid="{{ post._id }}">Like</button>
+<span id="likesCount-{{ post._id }}">{{ post.likes.length }}</span> likes
+
+<script>
+  const likeButtons = document.querySelectorAll('.likeButton');
+
+  likeButtons.forEach(button => {
+    button.addEventListener('click', () => {
+      const postId = button.getAttribute('data-postid');
+      const likesCountElement = document.getElementById(`likesCount-${postId}`);
+
+      // Disable the like button
+      button.disabled = true;
+
+      fetch(`/posts/${postId}/like`, { method: 'POST' })
+        .then(response => response.json())
+        .then(data => {
+          likesCountElement.textContent = data.likesCount;
+        })
+        .catch(error => {
+          console.log(error);
+        })
+        .finally(() => {
+          // Re-enable the like button after the request is completed
+          button.disabled = false;
+        });
+    });
+  });
+</script>
   {{/each}}
 </ul>
 
