--- a/views/posts/show.hbs
+++ b/views/posts/show.hbs
@@ -2,7 +2,7 @@
       <input type="submit" value="Log Out"></form>
 
 <h1>{{ post.message }}</h1>
-<p>Author: {{ post.author }}</p>
+<p>Author: {{ post.postAuthor.firstName }} {{ post.postAuthor.lastName }}</p>
 
     <button class="likeButton" data-postid="{{ post._id }}">Like</button>
 <span id="likesCount-{{ post._id }}">{{ post.likes.length }}</span> likes
@@ -34,14 +34,9 @@
   });
 </script>
 
-
-
-
-
-
-
 <ul class="comments">
   {{#each post.comments}}
+  <li>{{this.author}}</li>
   <li>{{ this.message }}</li>
   {{/each}}
 </ul>
