--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -13,16 +13,20 @@
     </li>
     {{!-- Displaying Comments --}}
     {{#each this.comments}}
-    <p>&gt;&gt;&gt;"{{this.content}}"<br>
+    <p><i>{{this.content}}</i><br>
     <span class="comment-author">Posted by {{this.user}}</p></li></span>
     {{/each}}
 
 
 {{!-- Comment section --}}
     <form action="/comments" method="post" class="comment-form">
+    <label for="comment"></label>
     <input type="hidden" name="postId" value={{this._id}} />
-    <input type="text" value="" name="commentContent" placeholder="Type comment here ..." required>
+    <input id="comment" type="text" value="" name="commentContent" placeholder="Type your comment here ..." required>
     <button type="submit" class="comment-button">Comment</button>
+    {{#if error}}
+    <p>Error: {{error}}</p>
+    {{/if}}
     </form>
 
 {{!-- Like button --}}
