--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -18,7 +18,7 @@
         <div id="content-box">
             <div id="login-box">
                 <h4 id="login-text">Please fill in your details below to register:</h4>
-                <form id="new-user-form" action="/users" method="post">
+                <form id="new-user-form" action="/users/new" method="post">
                     <input id="firstName" type="text" name="firstName" value="" placeholder="first name" required><br><br>
                     <input id="lastName" type="text" name="lastName" value="" placeholder="last name" required><br><br>
                     <input type="text" name="email" placeholder="email" id="email" required><br><br>
