added username and date/time to show in /posts

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,9 +1,12 @@
 <h1>Timeline</h1>
 <ul class="posts"> 
-  <li>{{{this.username}}}</li>
   {{#each posts}}
-  <li>{{{this.message}}}</li>
+  <li>Created at: {{this.currentDate}}</li>
+  <br>
+  <li>{{{this.username}}}</li>
   <br> 
+  <li>{{{this.message}}}</li>
+  <br>
   <li>{{{this.likes}}} likes</li>
   <br>
   {{/each}}
