--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -24,6 +24,10 @@
       <input type="password" class="form-control custom-input" id="password" name="password" placeholder="Enter your password" required>
     </div>
     <div class="form-group">
+      <label for="image">Profile Image:</label>
+      <input type="file" class="form-control custom-input" id="image" name="image">
+    </div>
+    <div class="form-group">
       <button type="submit" class="btn btn-primary btn-block" id="submit">Sign Up</button>
     </div>
   </form>
