add sentFriendRequests field to user model in order to evaluate whethere a request was sent to that user already and if it was to not allow to Add Friend again, not fully implemented yet

--- a/views/profile/index.hbs
+++ b/views/profile/index.hbs
@@ -26,7 +26,7 @@
         <input type="hidden" name="friendEmail" value="{{this.email}}">
         <li>{{this.firstName}} {{this.lastName}}
           {{#if friendRequestSent}}
-            {{#if (eq this.email friendRequestSent)}}
+            {{#if (currentUser.sentFriendRequests.includes this.email)}}
               <button class="addFriendButton" type="button" disabled>Friend Request Sent</button>
             {{else}}
               <button class="addFriendButton" type="button">Add Friend</button>
