--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -26,8 +26,8 @@
       </ul>
       <label for="password">Password: </label><br>
       <input id="password" type="password" name="password" value="" required><br>
-      <label for="confirm-password">Confirm Password: </label><br>
-      <input id="confirm-password" type="password" name="confirmPassword" value="" required><br>
+      <label for="confirmPassword">Confirm Password: </label><br>
+      <input id="confirmPassword" type="password" name="confirmPassword" value="" required><br>
       <input id="submit" type="submit" value="Submit" class="global-button">
     </form>
     <p>Did you mean <a href="/sessions/new">login</a>?</p>
