--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title class="title">{{title}}</title>
-        <link rel="stylesheet" href="/stylesheets/style.css">
+        <link rel="stylesheet" href="/stylesheets/master.css">
     </head>
     <body>
         <nav>
