--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,6 +1,6 @@
 <div class="timeline-navbar fixed-content">
   <div class="topbar">
-    <div class="initials">Initials</div>
+    <div class="initials">{{initials}}</div>
     <h1 class="title">Acebook</h1>
     <form action='/sessions?_method=DELETE' method='POST'>
       <input type="submit" value="Log Out" class="global-button logout">
