working on uploading images

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -6,7 +6,12 @@
   {{#each posts}}
   <li>
     <p>{{this.postAuthor.firstName}} {{this.postAuthor.lastName}} posted:</p>
-    <a href="/posts/{{this._id}}">{{this.message}}</a>
+   <a href="/posts/{{this._id}}">
+      {{#if this.image.contentType}}
+        <img src="/posts/{{this._id}}/image" alt="Post Image" />
+      {{/if}}
+    </a>
+     <a href="/posts/{{this._id}}">{{this.message}}</a>
     
     <button class="likeButtonTimeline" data-postid="{{this._id}}">Like</button>
     <span id="likesCount-{{this._id}}">{{this.likes.length}}</span> likes
