--- a/views/users/signup.hbs
+++ b/views/users/signup.hbs
@@ -16,7 +16,8 @@
     id="email" 
     type="email" 
     name="email" 
-    value="" maxlength="30" 
+    value="" 
+    maxlength="30" 
     oninvalid="alert('You must enter a valid email address')"
     required />
 
