--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,5 +1,3 @@
-
-
 {{#if messages.success}}
   <ul class="messages">
     {{#each messages.success}}
@@ -15,49 +13,14 @@
   </ul>
 {{/if}}
 
+{{> posts/new }}
+
 <a class="new-post-link" href="/posts/new">New Post</a>
 
 <section class="timeline-section">
   <ul class="posts">
     {{#each posts}}
-      <li class="post-item">
-        <div class="post-message">{{this.message}}</div>
-        <p class="post-author">Written by {{this.username}}</p>
-        <p class="post-date">Posted on {{this.formattedCreatedAt}}</p>
-        <div class="actions">
-          {{#unless this.currentUser}}
-            <form action="/friends" method="post">
-              <input type="hidden" name="recipientId" value={{this.user}} />
-              <button type="submit" class="befriend-button">Poke</button>
-            </form>
-          {{/unless}}
-
-          {{#each this.comments}}
-          <p><i>{{this.content}}</i><br>
-          <span class="comment-author">Posted by {{this.user}}</p></li></span>
-          {{/each}}
-
-          <form action="/comments" method="post" class="comment-form">
-          <label for="comment"></label>
-          <input type="hidden" name="postId" value={{this._id}} />
-          <input id="comment" type="text" value="" name="commentContent" placeholder="Type your comment here ..." required>
-          <button type="submit" class="comment-button">Comment</button>
-          </form>
-
-          <form action="/likes" method="post">
-            <input type="hidden" name="postId" value={{this._id}} />
-            <button type="submit" class="like-button">❤️</button>
-          </form>
-        </div>
-        <div class="post-likes">
-          {{this.likesCount}} likes
-          <div class="liked-by-tooltip">
-            {{#each this.likedBy}}
-              <div>{{this}}</div>
-            {{/each}}
-          </div>
-        </div>
-      </li>
+      {{> posts/post this}}
     {{/each}}
   </ul>
 </section>
