--- a/views/partials/posts/post.hbs
+++ b/views/partials/posts/post.hbs
@@ -1,15 +1,15 @@
 <li class="post-item">
-  <div class="post-message">{{this.message}}</div>
-  <p class="post-author">Written by {{this.username}}</p>
-  <p class="post-date">Posted on {{this.formattedCreatedAt}}</p>
+  <div class="post-message">{{post.message}}</div>
+  <p class="post-author">Written by {{post.username}} </p>
+  <p class="post-date">Posted on {{post.formattedCreatedAt}}</p>
   <div class="actions">
-    {{#unless this.currentUser}}
+    {{#unless post.currentUser}}
       <form action="/friends" method="post">
-        <input type="hidden" name="recipientId" value={{this.user}} />
+        <input type="hidden" name="recipientId" value={{post.user}} />
         <button type="submit" class="befriend-button">Poke</button>
       </form>
     {{/unless}}
-    {{> posts/comment this}}
-    {{> posts/likes this}}
+    {{> posts/comment post}}
+    {{> posts/likes post}}
   </div>
 </li>
