--- a/views/partials/posts/post.hbs
+++ b/views/partials/posts/post.hbs
@@ -14,7 +14,7 @@
       {{> posts/comment this}}
     {{/each}}
 
-    {{> posts/comment_form post}}
+    {{> posts/new_comment post}}
     {{> posts/likes post}}
   </div>
 </li>
